--- a/VoZeMan_V1/src/application/view/mainContent/Settings.fxml
+++ b/VoZeMan_V1/src/application/view/mainContent/Settings.fxml
@@ -11,26 +11,51 @@
 
 <GridPane fx:id="gridPaneForSettings" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.mainContent.SettingsController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="535.0000305175781" minWidth="10.0" prefWidth="348.0000244140625" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="144.7999755859375" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="535.0000305175781" minWidth="10.0" prefWidth="357.59998779296876" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="59.60001220703123" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="82.79998779296875" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="245.59998168945313" minHeight="10.0" prefHeight="24.400001907348628" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="473.19999809265136" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="245.59998168945313" minHeight="10.0" prefHeight="36.79999198913575" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="473.19999809265136" minHeight="0.0" prefHeight="44.00000801086426" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="473.19999809265136" minHeight="0.0" prefHeight="34.2000244140625" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="47.79997558593749" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="40.600006103515625" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="35.39997558593751" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="293.0000244140625" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.6" prefWidth="55.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveRaplaLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
          <styleClass>
             <String fx:value="buttonsInWindows" />
             <String fx:value="bg-lightred" />
          </styleClass>
       </Button>
       <TextField fx:id="enterRaplaLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <Label prefHeight="18.0" prefWidth="400.0" styleClass="lable" text="Hier einen gültigen RAPLA-Link eintragen:" GridPane.halignment="LEFT">
+      <Label fx:id="raplaLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="lable" text="Hier einen gültigen RAPLA-Link eintragen:" GridPane.halignment="LEFT">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Label>
+      <Label fx:id="moodleLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="lable" text="Hier einen gültigen moodle-Link eintragen:" GridPane.rowIndex="2" />
+      <Label fx:id="dualisLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="lable" text="Hier einen gültigen Dualis-Link eintragen:" GridPane.rowIndex="4" />
+      <TextField fx:id="enterMoodleLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.rowIndex="3" />
+      <TextField fx:id="enterDualisLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.rowIndex="5" />
+      <Button fx:id="saveMoodleLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveMoodleLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <styleClass>
+            <String fx:value="buttonsInWindows" />
+            <String fx:value="bg-lightred" />
+         </styleClass>
+      </Button>
+      <Button fx:id="saveDualisLinkSettingsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveDualisLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <styleClass>
+            <String fx:value="buttonsInWindows" />
+            <String fx:value="bg-lightred" />
+         </styleClass>
+      </Button>
+      <Label fx:id="savedRaplaLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <Label fx:id="savedMoodleLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Label fx:id="savedDualisLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.rowIndex="5" />
    </children>
    <padding>
       <Insets left="5.0" />
