--- a/VoZeMan_V1/src/application/view/mainContent/Lecturer.fxml
+++ b/VoZeMan_V1/src/application/view/mainContent/Lecturer.fxml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../css/style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="459.5999755859375" minWidth="10.0" prefWidth="187.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="397.60005645751954" minWidth="10.0" prefWidth="311.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="244.79999389648438" minHeight="10.0" prefHeight="143.1999984741211" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="466.4000076293945" minHeight="10.0" prefHeight="307.4000244140625" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Label prefHeight="26.0" prefWidth="167.0" text="Dozent auswählen:" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <padding>
+            <Insets left="5.0" top="5.0" />
+         </padding>
+      </Label>
+   </children>
+</GridPane>
