--- a/VoZeMan_V1/src/application/view/css/style.css
+++ b/VoZeMan_V1/src/application/view/css/style.css
@@ -1,11 +1,16 @@
 .root{
 	-fx-border-color: #900e18;
     -fx-border-width: 0.4;
+    -fx-background-color: #ffffff;
 }
 
 .border-small-darkgrey{
 	-fx-border-color: #2b2f32;
     -fx-border-width: 0.4;
+}
+
+.bg-white {
+	-fx-background-color: #ffffff;
 }
 
 .bg-darkred{
@@ -30,14 +35,6 @@
 
 .bg-darkgrey{
 	-fx-background-color: #2b2f32;
-}
-
-.icon-solid{
-	-fx-font-family: "Font Awesome 5 Free Solid";
-}
-
-.icon-regular{
-	-fx-font-family: "Font Awesome 5 Free Regular";
 }
 
 .menu-btn{
@@ -84,4 +81,47 @@
 	-fx-font-family: "Century Gothic";
 	-fx-text-fill:green;
 	-fx-font-style:italic;
+}
+
+.textfield-notes {
+    -fx-background-color: -fx-control-inner-background;
+    -fx-background-insets: 0;
+    -fx-padding: 1 3 1 3;
+    -fx-border-width: 0 0 2 0; 
+    -fx-border-color: #5e6871;
+}
+
+.textarea-notes {
+    -fx-background-color: -fx-control-inner-background;
+    -fx-background-insets: 0;
+    -fx-padding: 1 3 1 3;
+    -fx-border-width: 0 0 0 0; 
+}
+
+.textarea-notes:focused .content {
+    -fx-background-color: #fff;
+}
+
+
+.listview-notes {
+    -fx-background-color: -fx-control-inner-background;
+    -fx-background-insets: 0;
+    -fx-padding: 1 3 1 3;
+    -fx-border-width: 0 0 0 0; 
+}
+
+.notes-btn{
+	-fx-background-color: #900e18;
+	-fx-text-fill: #ffffff;
+	-fx-background-radius: 5em;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 6, 0.5, 1.0, 1.0);
+}
+
+.notes-btn:hover{
+	-fx-background-color: #b6121b;
+}
+
+.notes-page {
+	-fx-background-color: #ffffff;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 10, 0.5, 3.0, 3.0);
 }
