--- a/VoZeMan_V1/src/application/view/css/style.css
+++ b/VoZeMan_V1/src/application/view/css/style.css
@@ -45,7 +45,7 @@
 }
 
 .menu-btn:hover{
-	-fx-background-color: #5e6871;
+	-fx-background-color: #900e18;
 }
 
 .menu-top-btn{
@@ -89,6 +89,8 @@
     -fx-padding: 1 3 1 3;
     -fx-border-width: 0 0 2 0; 
     -fx-border-color: #5e6871;
+    -fx-font-family: "Century Gothic";
+    -fx-font-size: 14pt;
 }
 
 .textarea-notes {
@@ -96,6 +98,8 @@
     -fx-background-insets: 0;
     -fx-padding: 1 3 1 3;
     -fx-border-width: 0 0 0 0; 
+    -fx-font-family: "Century Gothic";
+    -fx-font-size: 12pt;
 }
 
 .textarea-notes:focused .content {
@@ -108,6 +112,7 @@
     -fx-background-insets: 0;
     -fx-padding: 1 3 1 3;
     -fx-border-width: 0 0 0 0; 
+    -fx-font-size: 12pt;
 }
 
 .notes-btn{
@@ -124,4 +129,15 @@
 .notes-page {
 	-fx-background-color: #ffffff;
 	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 10, 0.5, 3.0, 3.0);
+}
+
+.browser-top {
+	-fx-background-color: #cccdc8;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 10, 0.5, 3.0, 0.0);
+	-fx-border-radius: 10 10 0 0;
+  	-fx-background-radius: 10 10 0 0;
+}
+
+.round-btn{
+	-fx-background-radius: 5em;
 }
