--- a/VoZeMan_V1/src/application/view/mainContent/Notes.fxml
+++ b/VoZeMan_V1/src/application/view/mainContent/Notes.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="gridPaneForNotes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="550.0" prefWidth="700.0" styleClass="bg-grey" stylesheets="@../css/style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="application.controller.mainContent.NotesController">
+<GridPane fx:id="gridPaneForNotes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="550.0" prefWidth="700.0" styleClass="bg-grey" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.mainContent.NotesController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="80.0" />
@@ -69,9 +69,9 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <TextArea fx:id="textareaForNotesText" onKeyPressed="#checkForChanges" prefHeight="200.0" prefWidth="250.0" promptText="Schreibe deine Notizen auf..." styleClass="textarea-notes" wrapText="true" GridPane.rowIndex="2" GridPane.rowSpan="2">
+      <TextArea fx:id="textareaForNotesText" onKeyPressed="#checkForChanges" prefHeight="200.0" prefWidth="250.0" promptText="Schreibe deine Notizen auf..." styleClass="textarea-notes" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
          <GridPane.margin>
-            <Insets bottom="30.0" left="40.0" right="5.0" top="10.0" />
+            <Insets bottom="30.0" left="35.0" right="70.0" top="10.0" />
          </GridPane.margin>
          <font>
             <Font size="14.0" />
@@ -79,8 +79,13 @@
       </TextArea>
       <ListView fx:id="listViewForNotes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#showNote" prefHeight="200.0" prefWidth="200.0" styleClass="listview-notes" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="3">
          <GridPane.margin>
-            <Insets bottom="100.0" left="50.0" right="65.0" top="50.0" />
+            <Insets bottom="100.0" left="50.0" right="65.0" top="80.0" />
          </GridPane.margin>
       </ListView>
+      <Label styleClass="textarea-notes" text="Deine Notizen:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="50.0" top="50.0" />
+         </GridPane.margin>
+      </Label>
    </children>
 </GridPane>
