ComboBox in Dozenten kann jetzt gefüllt werden

--- a/VoZeMan_V1/src/application/content/lecturer/Lecturer.fxml
+++ b/VoZeMan_V1/src/application/content/lecturer/Lecturer.fxml
@@ -14,8 +14,8 @@
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="345.0" minWidth="10.0" prefWidth="345.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="32.79999389648438" minHeight="10.0" prefHeight="32.79999389648438" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="193.60000610351562" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="167.0" text="Dozent auswählen:" GridPane.halignment="LEFT" GridPane.valignment="TOP">
@@ -23,12 +23,7 @@
             <Insets left="5.0" top="5.0" />
          </padding>
       </Label>
-      <ComboBox fx:id="selectLecturerComboBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
+      <ComboBox fx:id="selectLecturerComboBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#eventComboBox" prefHeight="33.0" prefWidth="258.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
       <TextArea fx:id="showLecturerTextArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="342.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <Label fx:id="selectLecturerLabel" layoutX="11.0" layoutY="11.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="167.0" text="Dozent auswählen:">
-         <padding>
-            <Insets left="5.0" top="5.0" />
-         </padding>
-      </Label>
    </children>
 </GridPane>
