--- a/VoZeMan_V1/src/application/client/style.css
+++ b/VoZeMan_V1/src/application/client/style.css
@@ -141,3 +141,8 @@
 .round-btn{
 	-fx-background-radius: 5em;
 }
+
+.window-lecturer {
+	-fx-font-size: 12pt;
+	-fx-font-family: "Century Gothic";
+}
