--- a/VoZeMan_V1/src/application/content/lecturer/Lecturer.fxml
+++ b/VoZeMan_V1/src/application/content/lecturer/Lecturer.fxml
@@ -8,22 +8,22 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.lecturer.LecturererController">
+<GridPane minHeight="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.lecturer.LecturererController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="345.0" minWidth="10.0" prefWidth="345.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="32.79999389648438" minHeight="10.0" prefHeight="32.79999389648438" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="193.60000610351562" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="47.2000072479248" minHeight="10.0" prefHeight="47.2000072479248" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="185.5999927520752" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="167.0" styleClass="window-lecturer" text="Dozent auswählen:" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="167.0" styleClass="window-lecturer" text="Dozent auswählen:" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
          <padding>
             <Insets left="5.0" top="5.0" />
          </padding>
       </Label>
-      <ComboBox fx:id="selectLecturerComboBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#eventComboBox" prefHeight="34.0" prefWidth="341.0" styleClass="window-lecturer" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="TOP" />
-      <TextArea fx:id="showLecturerTextArea" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="342.0" styleClass="window-lecturer" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <ComboBox fx:id="selectLecturerComboBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#eventComboBox" prefHeight="34.0" prefWidth="341.0" styleClass="window-lecturer" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
+      <TextArea fx:id="showLecturerTextArea" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="342.0" styleClass="window-lecturer" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
    </children>
 </GridPane>
