--- a/VoZeMan_V1/src/application/client/style.css
+++ b/VoZeMan_V1/src/application/client/style.css
@@ -146,3 +146,8 @@
 	-fx-font-size: 12pt;
 	-fx-font-family: "Century Gothic";
 }
+
+.textarea-lecturer {
+	-fx-font-size: 12pt;
+	-fx-font-family: "Century Gothic";
+}
