--- a/VoZeMan_V1/src/application/content/mensa/Mensa.fxml
+++ b/VoZeMan_V1/src/application/content/mensa/Mensa.fxml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="gridPaneForMensa" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.mensa.MensaController">
+<GridPane fx:id="gridPaneForMensa" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.mensa.MensaController">
   <columnConstraints>
-    <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" prefWidth="500.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" prefWidth="500.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints prefHeight="500.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="500.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ImageView fx:id="imageViewForMensa" fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
+      <ImageView fx:id="imageViewForMensaBackground" fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../img/mensa-background.jpg" />
+         </image>
+      </ImageView>
+      <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.4" prefHeight="100.0" prefWidth="100.0" styleClass="bg-grey" />
+      <Label fx:id="labelForMensaMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.8" prefHeight="100.0" prefWidth="100.0" styleClass="notes-page" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+         <GridPane.margin>
+            <Insets bottom="170.0" left="100.0" right="100.0" top="70.0" />
+         </GridPane.margin>
+      </Label>
+      <ImageView fx:id="imageViewForMensaMenu" fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets top="-30.0" />
+         </GridPane.margin></ImageView>
    </children>
 </GridPane>
