--- a/VoZeMan_V1/src/application/content/roomes/Roomes.fxml
+++ b/VoZeMan_V1/src/application/content/roomes/Roomes.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="gridPaneForRoomes" prefHeight="400.0" prefWidth="600.0" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.roomes.RoomesController">
+<GridPane fx:id="gridPaneForRoomes" prefHeight="400.0" prefWidth="600.0" styleClass="bg-grey" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.roomes.RoomesController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="440.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="140.0" />
@@ -34,11 +34,12 @@
       <Label fx:id="searchLabelForRoomes" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="10.0" prefHeight="40.0" prefWidth="600.0" styleClass="label-settings" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="5.0" />
-         </GridPane.margin></Label>
+         </GridPane.margin>
+      </Label>
       <Label fx:id="labelForImageResizingForRoomes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnSpan="2" GridPane.rowIndex="2" />
       <ImageView fx:id="imageViewForRoomes" fitHeight="300.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
    </children>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
 </GridPane>
