--- a/VoZeMan_V1/src/application/content/roomes/Roomes.fxml
+++ b/VoZeMan_V1/src/application/content/roomes/Roomes.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane fx:id="gridPaneForRoomes" prefHeight="400.0" prefWidth="600.0" styleClass="bg-grey" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.roomes.RoomesController">
   <columnConstraints>
@@ -31,10 +32,13 @@
             <String fx:value="menu-btn" />
          </styleClass>
       </Button>
-      <Label fx:id="searchLabelForRoomes" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="10.0" prefHeight="40.0" prefWidth="600.0" styleClass="label-settings" GridPane.columnSpan="2" GridPane.rowIndex="1">
+      <Label fx:id="searchLabelForRoomes" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="10.0" prefHeight="40.0" prefWidth="600.0" styleClass="label-settings" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
       </Label>
       <Label fx:id="labelForImageResizingForRoomes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnSpan="2" GridPane.rowIndex="2" />
       <ImageView fx:id="imageViewForRoomes" fitHeight="300.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
