--- a/VoZeMan_V1/src/application/content/mensa/Mensa.fxml
+++ b/VoZeMan_V1/src/application/content/mensa/Mensa.fxml
@@ -24,7 +24,12 @@
       <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.4" prefHeight="100.0" prefWidth="100.0" styleClass="bg-grey" />
       <Label fx:id="labelForMensaMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.8" prefHeight="100.0" prefWidth="100.0" styleClass="notes-page" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
          <GridPane.margin>
-            <Insets bottom="170.0" left="100.0" right="100.0" top="70.0" />
+            <Insets bottom="140.0" left="60.0" right="60.0" top="60.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="labelForImageResizing" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+         <GridPane.margin>
+            <Insets bottom="100.0" left="20.0" right="20.0" top="20.0" />
          </GridPane.margin>
       </Label>
       <ImageView fx:id="imageViewForMensaMenu" fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
