settings resizable gemacht

--- a/VoZeMan_V1/src/application/menu/Menu.fxml
+++ b/VoZeMan_V1/src/application/menu/Menu.fxml
@@ -12,7 +12,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" stylesheets="@../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.menu.MenuController">
    <children>
-      <GridPane fx:id="menuLeft" layoutX="10.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="300.0" styleClass="bg-red">
+      <GridPane fx:id="menuLeft" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="300.0" styleClass="bg-red">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
