--- a/VoZeMan_V1/src/application/content/settings/Settings.fxml
+++ b/VoZeMan_V1/src/application/content/settings/Settings.fxml
@@ -12,37 +12,41 @@
 
 <GridPane fx:id="gridPaneForSettings" prefHeight="600.0" prefWidth="800.0" styleClass="bg-grey" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.settings.SettingsController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="535.0000305175781" minWidth="10.0" prefWidth="130.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="481.9999755859375" minWidth="10.0" prefWidth="477.4000122070313" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="102.99997558593748" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="83.80002441406248" />
+    <ColumnConstraints hgrow="SOMETIMES" prefWidth="80.0" />
+    <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" prefWidth="80.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="44.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="38.0" minHeight="0.0" prefHeight="38.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="67.20001220703125" minHeight="10.0" prefHeight="66.39999389648438" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="57.59999389648439" minHeight="10.0" prefHeight="43.20000610351562" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="293.0000244140625" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="80.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label fx:id="settingsWindowNiceLabel" prefHeight="800.0" prefWidth="600.0" styleClass="notes-page" stylesheets="@../../client/style.css" GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <Label fx:id="settingsWindowNiceLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="600.0" styleClass="notes-page" stylesheets="@../../client/style.css" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="7">
          <GridPane.margin>
-            <Insets right="-103.0" top="-280.0" />
+            <Insets bottom="40.0" left="-40.0" right="-40.0" top="-60.0" />
          </GridPane.margin>
          <padding>
             <Insets top="5.0" />
          </padding>
       </Label>
-      <PasswordField fx:id="enterMoodlePasswordPasswordfield" prefHeight="31.0" prefWidth="478.0" promptText="Passwort" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <PasswordField fx:id="enterMoodlePasswordPasswordfield" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Passwort" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="6">
          <GridPane.margin>
-            <Insets top="26.0" />
+            <Insets />
          </GridPane.margin>
       </PasswordField>
-      <TextField fx:id="enterMoodleUserTextfield" prefHeight="25.6" prefWidth="475.0" promptText="nachname.vorname@dh-karlsruhe.de" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-      <Label fx:id="moodleSignInLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Anmeldedaten für moodle und Dualis:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-      <Label fx:id="raplaLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Hier einen gültigen RAPLA-Link eintragen:" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+      <TextField fx:id="enterMoodleUserTextfield" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="nachname.vorname@dh-karlsruhe.de" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="5" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets bottom="10.0" />
+         </GridPane.margin></TextField>
+      <Label fx:id="moodleSignInLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="label-settings" text="Anmeldedaten für moodle und Dualis:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
+      <Label fx:id="raplaLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="RAPLA-Link eintragen:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
@@ -50,20 +54,32 @@
             <Insets top="3.0" />
          </padding>
       </Label>
-      <TextField fx:id="enterRaplaLinkSettingsTextfield" prefHeight="25.6" prefWidth="475.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <Button fx:id="signInMoodleButton" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#signInMoodle" prefHeight="24.0" prefWidth="94.0" text="Anmelden" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+      <TextField fx:id="enterRaplaLinkSettingsTextfield" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+      <Button fx:id="signInMoodleButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#signInMoodle" text="Anmelden" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
          <styleClass>
             <String fx:value="btn-signIn" />
             <String fx:value="bg-lightred" />
          </styleClass>
+         <GridPane.margin>
+            <Insets bottom="25.0" left="10.0" top="-25.0" />
+         </GridPane.margin>
+         <padding>
+            <Insets bottom="-25.0" top="-25.0" />
+         </padding>
       </Button>
-      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveRaplaLink" prefHeight="27.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveRaplaLink" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <styleClass>
             <String fx:value="buttonsInWindows" />
             <String fx:value="bg-lightred" />
          </styleClass>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
       </Button>
-      <Label fx:id="savedRaplaLinkLabel" alignment="CENTER" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <Label fx:id="savedRaplaLinkLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin></Label>
    </children>
    <padding>
       <Insets bottom="5.0" top="5.0" />
